public/css/painel.css
/* Estilo para os botões de edição individuais */
.edit-btn {
    background-color: var(--cor-5);
    color: white;
    border: none;
    cursor: pointer;
    padding: 5px 10px;
    border-radius: 4px;
    font-size: 14px;
    transition: background-color 0.3s;
}

.edit-btn:hover {
    background-color: var(--cor-2);
}

/* Ajustes para o campo de edição (input) */
.edit-input {
    width: calc(100% - 12px); /* Ajuste para o padding */
    padding: 6px 10px; /* Padding mais confortável */
    margin: 5px 0;
    border: 1px solid #ccc;
    border-radius: 4px;
    font-size: 14px;
    box-sizing: border-box; /* Garante que o padding não ultrapasse o tamanho */
}

/* Remover ou esconder qualquer botão de edição em massa */
#update-profile {
    display: none;
}


/* Estilo básico para o modal */
.modal {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    display: none;
    justify-content: center;
    align-items: center;
  }
  
  .modal-content {
    background-color: white;
    padding: 20px;
    border-radius: 5px;
    text-align: center;
  }
  
  button {
    margin: 10px;
    padding: 10px 20px;
    cursor: pointer;
  }
  

/* Estilo para quando a mensagem de erro aparecer */
#mensagem-texto.error {
    color: red; /* Muda para vermelho em caso de erro */
}

